fix dependant facet flicker on no results
https://coveord.atlassian.net/browse/JSUI-3272

--- a/sass/DynamicFacet/_DynamicFacet.scss
+++ b/sass/DynamicFacet/_DynamicFacet.scss
@@ -6,6 +6,9 @@
   &.coveo-hidden {
     display: none;
   }
+  &.coveo-hidden-dependant-facet {
+    display: none;
+  }
 }
 
 .coveo-no-visible-facet {
